Mobile Web App R1
• Added styles for New/Edit screens
• Added custom keyboard mixin

--- a/WebApp/exercises_new.html
+++ b/WebApp/exercises_new.html
@@ -26,7 +26,7 @@
             <div class="alpha">
                 <button>A</button>
                 <button>B</button>
-                <button>C</button>
+                <button class="active">C</button>
                 <button>D</button>
                 <button>E</button>
                 <button>F</button>
@@ -37,29 +37,26 @@
                 <button>2</button>
                 <button>3</button>
                 <button>4</button>
-                <button>5</button>
+                <button class="active">5</button>
                 <button>6</button>
                 <button>7</button>
             </div>
             <div class="accent">
                 <button>Sharp</button>
-                <button>Flat</button>
+                <button class="active">Flat</button>
             </div>
             <div class="accent">
-                <button>Minor</button>
+                <button class="active">Minor</button>
                 <button>Diminished</button>
             </div>
-            <button>Save</button>
+            <div class="submit">
+                <button>Next Bar</button>
+                <button>Add Chord</button>
+            </div>
         </section>
 
         <footer>
             &copy; Maria Szubski 2016
         </footer>
-
-        <section  class="bg_orange" id="saved">
-            <h1>Chord Change <span class="state">Added</span></h1>
-            <img src="img/saved.svg" alt="Complete">
-        </section>
-
     </body>
 </html>
