--- a/WebApp/songs_new_02.html
+++ b/WebApp/songs_new_02.html
@@ -10,7 +10,7 @@
         <header>
             <h1>New Song</h1>
             <h2>Step 2: Chords</h2>
-            <a href="songs.html">
+            <a href="songs_new_01.html">
                 <img src="img/back.svg" alt="Back">
             </a>
         </header>
@@ -30,11 +30,10 @@
         </section>
 
         <section id="s_new">
-            <button>New Bar</button>
             <button class="secondary"><i class="plus"></i> New Section</button>
         </section>
 
-        <section class="keyboard" id="keyboard_chords">
+        <section class="keyboard">
             <div class="alpha">
                 <button class="active">A</button>
                 <button>B</button>
@@ -67,7 +66,7 @@
             </div>
         </section>
 
-        <a href="songs_new_03.html">
+        <a href="songs_new_03.html" id="save">
             <img src="img/next.svg" alt="Save &amp; Continue">
         </a>
 
