Mobile Web App R1
• Added styles to Exercise Log

--- a/WebApp/timer.html
+++ b/WebApp/timer.html
@@ -56,7 +56,7 @@
                 </div>
                 <article>
                     <h4>History</h4>
-                    <ul>
+                    <ul class="log">
                         <li>
                             <h5>March 31</h5>
                             <h6>102</h6>
@@ -77,15 +77,12 @@
                             <h5>March 27</h5>
                             <h6>96</h6>
                         </li>
-                        <li>
-                            <h5>Add New Chord Combination</h5>
-                        </li>
                     </ul>
                 </article>
             </article>
             <article id="charts">
                 <h4>Charts</h4>
-                <canvas id="chart" width="100%" height="100%"></canvas>
+                <canvas id="chart"></canvas>
                 <section id="axis">
                     <ul id="y">
                         <li>105</li>
