Mobile Web App R1
• Added additional styles for exercise log page.

--- a/WebApp/timer.html
+++ b/WebApp/timer.html
@@ -50,10 +50,12 @@
             </article>
             <article id="changes">
                 <h4>Log Chord Changes</h4>
-                <input type="number">
-                <div class="submit">
-                    <button>Log</button>
-                </div>
+                <section class="form">
+                    <input type="number" placeholder="000">
+                    <div class="submit">
+                        <button>Log</button>
+                    </div>
+                </section>
                 <article>
                     <h4>History</h4>
                     <ul class="log">
@@ -100,7 +102,7 @@
             <div class="pagination">
                 <img src="img/page.svg" alt="Page 1">
                 <img src="img/page.svg" alt="Page 2">
-                <img src="img/page.svg" alt="Page 3">
+                <img src="img/page.svg" alt="Page 3" class="active">
             </div>
         </section>
     </body>
