Minor Design Updates

--- a/Prototype/songs.html
+++ b/Prototype/songs.html
@@ -25,16 +25,6 @@
 <!--																		Song Details -->
 			<article id="song_container">
 				<section id="chords_container">
-					<section class="chordSection" id="cs_1">
-						<h4>Verse</h4>
-						<div class="bars">
-						</div>
-					</section>
-					<section class="chordSection" id="cs_2">
-						<h4>Chorus</h4>
-						<div class="bars">
-						</div>
-					</section>
 				</section>
 				<section id="strum_container">
 					<h4>Strum Pattern</h4>
@@ -99,7 +89,7 @@
 				</section>
 			</article>
 		</main>
-		<script src="js/song_json.js" charset="utf-8"></script>
+		<script src="js/song_json_break.js" charset="utf-8"></script>
 		<script src="js/scripts.js" charset="utf-8"></script>
 	</body>
 </html>
