--- a/WebApp/song_detail.html
+++ b/WebApp/song_detail.html
@@ -5,7 +5,7 @@
         <title>Guitar Practice</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
     </head>
-    <body class="song_detail bg_white">
+    <body class="song_detail bg_white" id="song_detail">
 
         <header>
             <h1 id="s_title">Three Little Birds</h1>
