--- a/Prototype/index.html
+++ b/Prototype/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<div id="mobileContainer">
 		<main id="homeNav">
 			<a href="chords.html">
 				<h1>1 Minute Chord Changes</h1>
@@ -16,5 +17,6 @@
 				<img src="img/songs.png" alt="Song List">
 			</a>
 		</main>
+		</div>
 	</body>
 </html>
